<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/info_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:text="@string/information"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/info_txt"
        android:hint="@string/enter_name"
        android:padding="10dp"
        android:textColorHint="#888"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:layout_marginTop="10dp"
        android:hint="@string/enter_age"
        android:padding="10dp"
        android:textColorHint="#888"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/age"
        android:layout_marginTop="10dp"
        android:hint="@string/enter_phone"
        android:inputType="phone"
        android:padding="10dp"
        android:textColorHint="#888"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/phone"
        android:layout_marginTop="10dp"
        android:hint="@string/enter_city"
        android:padding="10dp"
        android:textColorHint="#888"
        android:textSize="16sp" />

    <Button
        android:id="@+id/save"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/city"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/save"
        android:textColor="#fff"
        android:textSize="16sp" />

    <Button
        android:id="@+id/show"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/save"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/show"
        android:textColor="#fff"
        android:textSize="16sp" />
</RelativeLayout>
